<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ZhiDao</string>
    <string name="hello_world">请执行以下命令:</string>
    <string name="action_settings">Settings</string>
    <string name="string_ask">提问</string>
    <string name="string_answer">回答</string>
    <string name="string_stop">停止</string>
    <string name="string_log">日志:</string>
    <string name="title_activity_web">WebActivity</string>

</resources>
