<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/ask_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_ask" />

    <Button
        android:id="@+id/answer_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_answer" />

    <Button
        android:id="@+id/stop_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_stop" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/text_log"
            android:text="@string/string_log"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </ScrollView>


</LinearLayout>
